# ChangeLog for gnome-extra/alarm-clock-applet
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Aug 2009; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  alarm-clock-applet-0.2.6.ebuild:
  Fixed useless slotted deps in *DEPEND, thanks to sedzimir

  28 Aug 2009; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  files/0.2.6-configure.ac.patch, alarm-clock-applet-0.2.6.ebuild:
  Fixed RDEPEND and configure.ac patch, thanks to sedzimir

  28 Aug 2009; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  +files/0.2.6-configure.ac.patch, +alarm-clock-applet-0.2.6.ebuild,
  +metadata.xml:
  New Ebuild for bug 283022
