@@ -1,5 +1,5 @@
 AUX 0.2.6-configure.ac.patch 1171 RMD160 008493691c6bea7e2b7cb83d49700e18162cfbb9 SHA1 b9cd8b747904c43ef6ecc38eac659b4f5fcfdab5 SHA256 f762bf8618e0128f92101592dc865ba5a35adec1840910a0ff434c471ec84c83
 DIST alarm-clock-applet-0.2.6.tar.gz 205905 RMD160 c60f90fe396fb735889a8139bf16d714ebf3b994 SHA1 d293ffe8be03776e8f5c9a039630fad9ed64f07b SHA256 7b58a6722d0515c91134b4a3707738eabfb837eac12506e73d6f2d0589a05586
-EBUILD alarm-clock-applet-0.2.6.ebuild 955 RMD160 d02e6b26c20cb55cc83f86d9daaa9769012ea5fa SHA1 cd7c6be8c509d6bb6fc136bd060d0271cec83ee8 SHA256 2af9e372f68d576bd5443700540514351c338b788b485f4a3c696a94acfced45
-MISC ChangeLog 700 RMD160 7fef97ac42517d376650f184756fcab99ddb2968 SHA1 51168e05d60e2e7b56b4e4049086ffd6c60823ab SHA256 7e8e9b22c6de529f0ddec21f60d7774656a31b57260fea50faf7a14ca4e59964
+EBUILD alarm-clock-applet-0.2.6.ebuild 953 RMD160 537d3bd9691a4858101a6fa24b1e5ca0804b1437 SHA1 cc1ea7d77680788e3b67725f39a424c699c2acec SHA256 f70ea36de8505fcf7ea7b2b5f2d5f0ab7041f2063e93f9b3288c1b0e1d16be99
+MISC ChangeLog 852 RMD160 844a0a555679d798971ba5883e95255783a95efc SHA1 89a80699fec38462ebec168efb67714770035212 SHA256 e59f872740f43fe4e42af8b9d5249deb82562943f9c565920f8cbf886335e0b3
 MISC metadata.xml 268 RMD160 7120604b3599fc2ae378832aebe144b9fe1317b4 SHA1 626e920cfeb326e15017a14794b8bdce69f618cc SHA256 44d222baa7ad3a9bf1476c0fdf4ea77b581b7f86d21a37e082d78a51aa4d563a
