@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Sep 2009; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
+  alarm-clock-applet-0.2.6.ebuild:
+  Cosmetic ebuild changes (identation)
+
   29 Aug 2009; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
   alarm-clock-applet-0.2.6.ebuild:
   Fixed useless slotted deps in *DEPEND, thanks to sedzimir
